1.React Native进阶之原生模块特性篇详解-适配Android开发 2.React Native 进阶之原生混合与数据通信开发详解-适配Android开发

--- a/ReactSecond/app/src/main/AndroidManifest.xml
+++ b/ReactSecond/app/src/main/AndroidManifest.xml
@@ -41,6 +41,14 @@
         android:name=".activity.ReactComponentActivity"
         android:screenOrientation="portrait"
         />
+    <activity
+        android:name=".activity.NativeLaunchedJsActivity"
+        android:screenOrientation="portrait"
+        />
+    <activity
+        android:name=".activity.NativeLaunchedJs2Activity"
+        android:screenOrientation="portrait"
+        />
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
     </application>
 </manifest>
