--- a/ReactSecond/package.json
+++ b/ReactSecond/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
+    "react-native-tab-navigator": "^0.3.3",
     "realm": "^1.0.2"
   },
   "devDependencies": {
