1原生封装dialog供Rn使用，并解决出现的问题 2 验证原生可以传递给Rn的数据类型，为实战做准备 3 Rn的增量更新初步

--- a/ReactSecond/app/build.gradle
+++ b/ReactSecond/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId "mix.react.com.reactsecond"
+        applicationId "mix.react.com.second"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode VERSION_CODE.toInteger()
