--- a/ReactSecond/app/src/main/AndroidManifest.xml
+++ b/ReactSecond/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="mix.react.com.reactsecond">
+          package="mix.react.com.second">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
