--- a/ReactSecond/app/build.gradle
+++ b/ReactSecond/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     testCompile 'junit:junit:4.12'
     compile "com.facebook.react:react-native:+"
+
+    compile 'com.google.code.gson:gson:2.7'
 }
