--- a/ReactSecond/app/src/main/AndroidManifest.xml
+++ b/ReactSecond/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -50,5 +50,14 @@
         android:screenOrientation="portrait"
         />
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
+
+
+    <receiver
+        android:name=".lib.receiver.CompleteReceiver"
+        >
+        <intent-filter>
+            <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+        </intent-filter>
+    </receiver>
     </application>
 </manifest>
