--- a/ReactSecond/app/build.gradle
+++ b/ReactSecond/app/build.gradle
@@ -69,13 +69,16 @@ android.applicationVariants.all{ variant ->
 
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.0.1'
     testCompile 'junit:junit:4.12'
-    compile "com.facebook.react:react-native:+"
-
+    compile 'com.facebook.react:react-native:+'
     compile 'com.google.code.gson:gson:2.7'
+    compile files('libs/javaxdelta-1.5.jar')
+    compile files('libs/javaxdelta-2.0.1.jar')
+    compile files('libs/javaxdelta-1.3.jar')
+    compile files('libs/javaxdelta-1.1.jar')
 }
